unpackaged/main/default/objects/EDF_Shortcuts__mdt/EDF_Shortcuts__mdt.object-meta.xml
<CustomObject>
    <label>EDF Shortcuts</label>
    <pluralLabel>EDF Shortcuts</pluralLabel>
</CustomObject>