unpackaged/main/default/objects/EDF_Shortcuts__mdt/fields/Page_Type__c.field-meta.xml
<CustomField>
    <fullName>Page_Type__c</fullName>
    <label>Page Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>