unpackaged/main/default/objects/EDF_Shortcuts__mdt/fields/ShortcutsDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortcutsDescription__c</fullName>
    <label>ShortcutsDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>