unpackaged/main/default/objects/EDF_Shortcuts__mdt/listViews/All_more_fields.listView-meta.xml
<ListView>
    <fullName>All_more_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Title__c</columns>
    <columns>Active__c</columns>
    <columns>FellowshipApplyingFor__c</columns>
    <columns>Button_Text__c</columns>
    <columns>Description__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Page_Name__c</columns>
    <columns>Page_Type__c</columns>
    <columns>URL__c</columns>
    <columns>Stages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All (more fields)</label>
    <language>en_US</language>
</ListView>