unpackaged/main/default/objects/EDF_Shortcuts__mdt/listViews/India_Shortcuts.listView-meta.xml
<ListView>
    <fullName>India_Shortcuts</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FellowshipApplyingFor__c</field>
        <operation>equals</operation>
        <value>India Fellowship</value>
    </filters>
    <label>India Shortcuts</label>
    <language>en_US</language>
</ListView>